# TFG_DAM

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  sitemap.xml
docs/: 1_introduccion.html  2_objetivos.html  3_planificacion.html  4_4_flujo.html  (+9 more)
dotfiles-manager/: README.md  install.sh  pyproject.toml  run.sh
dotfiles-manager/src/dotmng/: config.py  main.py  version.py
dotfiles-manager/src/dotmng/cli/: __init__.py  commands.py  console.py  create.py  customs.py  parser.py  printer.py
dotfiles-manager/src/dotmng/core/: context.py  pipelines.py  reporter.py  steps.py
dotfiles-manager/src/dotmng/data/: db_init.py  xdg_data.json
dotfiles-manager/src/dotmng/modules/: __init__.py  logger.py
dotfiles-manager/src/dotmng/modules/api/: __init__.py  client.py  poller.py
dotfiles-manager/src/dotmng/modules/database/: __init__.py  manager.py  models.py
dotfiles-manager/src/dotmng/resources/: assets.qrc  assets_wdgt.qrc  dotmng.desktop
dotfiles-manager/src/dotmng/ui/: __init__.py  actions.py  compiler.sh  handler.py  load_screen.py  main_window.py  worker.py
dotfiles-manager/src/dotmng/ui/forms/: widgets.ui  window.ui
dotfiles-manager/src/dotmng/ui/interface/: assets_rc.py  window.py
dotfiles-manager/src/dotmng/ui/styles/: alternate.qss  mainwindow.qss  page_0.qss  page_1.qss
dotfiles-manager/src/dotmng/ui/widgets/: __init__.py  assets_rc.py  custom_item.py  icon_resolver.py  model_item.py
dotfiles-manager/tests/modules/api/: test_api_errors.py
dotfiles-manager/tests/modules/database/: test_db_cat.py  test_manager.py  test_server_tasks.py
(+170 files in other folders)
