[project]
name = "dotfiles-manager"
version = "0.1.0"
authors = [
    {name = "Sergio Trujillo de la Nuez"}
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.64.0",
    "pyside6>=6.10.2",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.47",
]

[project.scripts]
dotmng = "dotmng.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dotmng.data" = ["*.json"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
